fix: ntm profile - most sale gap

--- a/src/assets/styles/ntm.scss
+++ b/src/assets/styles/ntm.scss
@@ -4,14 +4,19 @@
 
 @layer components {
 
+  .swiper-button-next, .swiper-button-prev {
+    @apply bg-white text-white p-10 rounded-full scale-50 text-[20px]
+  }
+
+  .swiper-button-disabled {
+    @apply hidden
+  }
+
 }
 
 @layer utilities {
   .rtl {
     direction: rtl;
   }
-}
 
-.swiper-button-prev, .swiper-button-next {
-  @apply bg-white text-white p-10 rounded-full scale-50
 }
